# embedded-text

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.tpl
.cargo/: config.toml
.github/workflows/: rust-nightly.yml  rust.yml  rust_msrv.yml  rust_stable.yml  rustdoc.yml  rustfmt.yml
benches/: parse.rs  render.rs
examples/: alignment-horizontal.rs  alignment-scrolling.rs  alignment-vertical.rs  center.rs  color.rs  colored_text.rs  editor.rs  extra_styles.rs  interactive-alignments.rs  interactive-columns.rs  interactive-editor.rs  interactive-height-modes.rs  interactive.rs  interactive_columns.rs  interactive_fit.rs  interactive_vertical.rs  justified.rs  left.rs  middleware.rs  middleware_style.rs  paragraph_spacing.rs  plugin-ansi.rs  plugin-tail.rs  plugin.rs  right.rs  special-characters-tabs.rs  special-characters.rs  specials.rs  styles-ansi.rs  styles-middleware.rs  styles-plugin.rs  styles-static.rs  tabs.rs  variable_width.rs  vertical.rs  whitespace-control.rs  whitespace_control.rs
src/: lib.rs  middleware.rs  parser.rs  plugin.rs  utils.rs
src/alignment/: bottom.rs  center.rs  justified.rs  left.rs  mod.rs  right.rs  scrolling.rs  top.rs
src/alignment/horizontal/: center.rs  justified.rs  left.rs  mod.rs  right.rs
src/alignment/test/: bottom.rs  center.rs  justified.rs  left.rs  middle.rs  mod.rs  right.rs  scrolling.rs  top.rs
src/alignment/vertical/: bottom.rs  center.rs  mod.rs  top.rs
src/parser/: ansi.rs  mod.rs
src/plugin/: mod.rs  private.rs  tail.rs
src/plugin/ansi/: mod.rs  utils.rs
src/rendering/: ansi.rs  character.rs  cursor.rs  decorated_space.rs  line.rs  line_iter.rs  mod.rs  modified_whitespace.rs  space_config.rs  whitespace.rs
src/style/: builder.rs  color.rs  height_mode.rs  horizontal_overdraw.rs  mod.rs  vertical_overdraw.rs
src/utils/: font_ext.rs  mod.rs  rect_ext.rs
