[package]
name = "embedded-text"
version = "0.5.0"
license = "MIT"
description = "TextBox for embedded-graphics"
repository = "https://github.com/embedded-graphics/embedded-text"
authors = ["Dániel Buga <bugadani@gmail.com>"]
keywords = ["embedded-graphics", "textbox", "text"]
categories = ["no-std", "embedded", "graphics"]
edition = "2021"
rust-version = "1.61"

exclude = [
    ".gitignore",
    ".github/",
]

[features]
plugin = []
ansi = ["ansi-parser"]
default = ["ansi"]

[[example]]
name = "interactive-editor"
required-features = ["plugin"]

[[example]]
name = "plugin"
required-features = ["plugin"]

[[example]]
name = "styles-plugin"
required-features = ["plugin"]

[dependencies]
az = "1.1"
embedded-graphics = "0.7.0"
ansi-parser = { version = "0.8.0", default-features = false, optional = true }
object-chain = "0.1"

[dev-dependencies]
embedded-graphics-simulator = "0.4.1"
sdl2 = "0.35.2"
